# BillExtraction

./: .gitignore  CHANGELOG.md  README.md  deployment_guide.md  main.py  package-lock.json  package.json  pyproject.toml  test_sheets_impersonation.py
backend-extraction/: .env.example  Dockerfile  check_sheets.py  debug_docling.py  main.py  pyproject.toml  requirements.txt  test_extraction_robust.py  verify_final.py
frontend/: .firebaserc  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/process/: route.ts
frontend/src/app/api/save/: route.ts
frontend/src/lib/: sheets.ts
scratch/: debug_amount_bug.py  deep_debug_amount.py  investigate_mismatch.py  search_total.py  setup_sheet.js  test_extraction.py  test_links.py  test_regex_iso.py  update_sheet_schema.py  verify_amount_advanced.py  verify_amount_fix.py  verify_amount_ocr.py  verify_context.py  verify_final.py  verify_integrated.py  verify_last.py  verify_strict.py  verify_waterfall.py  verify_weighted.py
